2005-12-28  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/book_properties_dialog_base.rb:

	Remembers the latest directory selected by the file chooser, so that we
	use this directory for the next cover open action.

	* lib/alexandria/ui/new_book_dialog.rb:

	Fixed assertion while packing the pixbuf cell renderer.

	* lib/alexandria/ui/main_app.rb:

	- Added a keyboard shortcut (CTRL+SHIFT+N) for the manual add book 
	  action ;

	- Make sure we observe libraries that have just been added, and we remove
	  ourself from the observers list when the library has been removed.  This
	  fixes a bug when books added in new libraries were not displayed.

2005-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* TODO,
	  data/alexandria/ui/menus.xml,
	  lib/alexandria.rb,
	  lib/alexandria/book.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/undo_manager.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	- Introduced Undo/Redo functionality for move and deletion actions ;
	- Added some various very small improvements.

2005-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog_base.rb:

	- Added a clear button just before the cover that set the default book
	  icon back ;
	- Added some tooltips to add/remove authors, clear cover and change cover
	  buttons.

	* lib/alexandria/ui/book_properties_dialog.rb:

	Make sure we never set the ISBN entry to nil if the book is ISBN-less.

	* lib/alexandria/ui/main_app.rb:

	- Renamed 'Set Rating' to 'My rating' ;
	- Reworded rating 1..5 menu items.

2005-12-07  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/ui/menus.xml,
	  data/alexandria/ui/popups.xml,
	  lib/alexandria/ui/main_app.rb:

	- Added contextual popup and Edit menu actions to set the rating of the
	  selected books ;
	- When right clicking on the books view, select the item/row if the mouse
	  if on an item/row.
